gap fixed

--- a/src/Components/Page4/Page4.css
+++ b/src/Components/Page4/Page4.css
@@ -7,7 +7,7 @@
   padding-bottom: 5rem;
   font-size: 1rem;
   font-weight: 450;
-  width: 80%;
+  width: 76%;
 }
 
 .slick-slide {
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 100px;
+  /* gap: 100px; */
   /* width: 300px; */
 }
 
@@ -35,7 +35,7 @@
 
 .content {
   color: rgb(0, 0, 0);
-  width: 270px;
+  width: 280px;
   text-align: center;
   height: 260px;
   background-color: white;
@@ -102,6 +102,4 @@
   object-fit: cover;
 }
 
-@media screen and (max-width:1024px){
 
-}
